--- a/expense.html
+++ b/expense.html
@@ -3,6 +3,8 @@
 <head>
     <title>Expense App</title>
     <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
+    <link rel="stylesheet" href="expense.css">
+
 </head>
 <body>
 
@@ -76,3 +78,4 @@
 <script src="expense.js"></script>
 </body>
 </html>
+
