Link expense.css for additional styling
Added a link to the expense.css stylesheet for styling.

--- a/expense.html
+++ b/expense.html
@@ -3,6 +3,7 @@
 <head>
     <title>Expense App</title>
     <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
+   <link rel="stylesheet" href="expense.css">
 
 </head>
 <body>
@@ -77,5 +78,6 @@
 <script src="expense.js"></script>
 </body>
 </html>
+
 
 
