Add new categories to expense form
Added 'Home' and 'Other' options to the category select dropdown.

--- a/expense.html
+++ b/expense.html
@@ -17,6 +17,8 @@
         <option>Food</option>
         <option>Fuel</option>
         <option>Movie</option>
+        <option>Home</option>
+        <option>Other</option>
     </select>
     <button>Add Expense</button>
 </form>
@@ -78,6 +80,7 @@
 <script src="expense.js"></script>
 </body>
 </html>
+
 
 
 
